# charlie

./: .gitmodules  Cargo.toml  app.rs  backend.rs  backend_udev.rs  backend_winit.rs  compositor.rs  controller.rs  fps.rs  grab.rs  main.rs  output.rs  popup.rs  prelude.rs  shell.nix  surface.rs  window.rs  workspace.rs  
.old/: compositor.rs  controller.rs  fps.rs  main.rs  prelude.rs  workspace.rs
src/: app.rs  engine.rs  handle.rs  lib.rs  main.rs  pointer.rs  prelude.rs  state.rs  traits.rs  xwayland.rs
src/engine/: winit.rs
src/engine/winit/: patch.rs
src/engines/: winit.rs
src/engines/winit/: window.rs  winit_render.rs  winit_update.rs
src/state/: desktop.rs  handle.rs  input.rs  keyboard.rs  pointer.rs  prelude.rs  wayland.rs  window.rs  xwayland.rs
wayland-delegate/: Cargo.toml
wayland-delegate/src/: impls.rs  lib.rs
wayland-delegate/test/: test.rs
