[package]
name = "charlie"
version = "0.1.0"
license = "MIT"
publish = false
edition = "2021"

[[bin]]
name = "fadroma"
path = "main.rs"

[dependencies]
bitflags = "1.2.1"
input = { version = "0.6.0", features = ["udev"], optional = true }
thiserror = "1"
xcursor = { version = "0.3.3", optional = true }
image = { version = "0.23.14", default-features = false, optional = true }
fps_ticker = { version = "1.0.0", optional = true }
rand = "0.8"
slog = { version = "2.1.1" }
slog-term = "2.8"
slog-async = "2.2"
slog-stdlog = "4.1.0"
slog-scope = "4.4.0"
xkbcommon = "0.4.0"

[dependencies.smithay]
version = "0.3.0"
default-features = false
features = [ "use_system_lib", "backend_egl", "backend_winit", "wayland_frontend", "slog-stdlog" ]

[dependencies.x11rb]
optional = true
version = "0.8"
default-features = false
features = [ "composite" ]

[build-dependencies]
gl_generator = "0.14"
