[package]
name = "charlie"
version = "0.1.0"
license = "MIT"
publish = false
edition = "2021"

[[bin]]
name = "fadroma"
path = "main.rs"

[dependencies]
bitflags = "1.2.1"
fps_ticker = { version = "1.0.0", optional = true }
image = { version = "0.23.14" }
input = { version = "0.6.0", features = ["udev"], optional = true }
rand = "0.8"
slog = { version = "2.1.1" }
slog-async = "2.2"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-term = "2.8"
thiserror = "1"
xcursor = "0.3.3"
xkbcommon = "0.4.0"
deno_core = "0.165.0"
x11rb = { version = "0.8", default-features = false, features = [ "composite" ] }

[dependencies.smithay]
version = "0.3.0"
default-features = false
features = [
  "use_system_lib",
  "backend_drm",
  "backend_gbm",
  "backend_egl",
  "backend_winit",
  "backend_udev",
  "backend_libinput",
  "backend_session",
  "wayland_frontend",
  "slog-stdlog",
  "xwayland"
]

[build-dependencies]
gl_generator = "0.14"
