[package]
name    = "wayland-delegate"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.49"
syn = { version = "^1", features = ["full"] }
quote = "^1"
wayland-server = "0.30.0"
wayland-protocols = { version = "0.30.0", features = ["unstable", "staging", "server"] }

[dependencies.smithay]
path = "../smithay"
default-features = false
features = [
  "backend_drm",
  "backend_egl",
  #"backend_gbm",
  "backend_libinput",
  #"backend_session",
  #"backend_udev",
  "backend_winit",
  #"backend_x11",
  "desktop",
  "slog-stdlog",
  "use_system_lib",
  "wayland_frontend",
  "xwayland",
  "x11rb_event_source",
]
